Fixed spacing on contact form

--- a/css/mikie.css
+++ b/css/mikie.css
@@ -291,7 +291,6 @@ input {
 textarea {
 	width: 100%;
 	border-radius: 10px;
-	margin-top: -10px;
 }
 
 input[type=submit] {
